--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
+
     <title>File 1</title>
   </head>
   <body>
-    <h1>First Message</h1>
-    <h2>Second Message</h2>
-    <h3>Third Message</h3>
+    <div class="bg">
+      <div class="div"></div>
+      <div class="div"></div>
+      <div class="div"></div>
+      <div class="div"></div>
+      <div class="div"></div>
+      <div class="div"></div>
+      <div class="div"></div>
+      <div class="div"></div>
+      <div class="div"></div>
+    </div>
+    <script src="./index.js"></script>
   </body>
 </html>
